<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="#8713EC">


    <androidx.cardview.widget.CardView
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="10dp"
        app:cardCornerRadius="10dp"
        app:cardBackgroundColor="#E5D68A"
        app:cardMaxElevation="12dp"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="true"
        >

        <!--
        In the above card-view widget
        card elevation property will give elevation to your card view
        card corner radius will provide radius to your card view
        card background color will give background color to your card view
        card max elevation will give the card-view maximum elevation
        card prevent corner overlap will add padding to CardView on v20 and before to prevent intersections between the Card content and rounded corners.
        card use compact padding will add padding in API v21+ as well to have the same measurements with previous versions.
        below are the two widgets imageview and text view we are displaying inside our card view.
        -->

        <TextView
            android:id="@+id/statename"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10sp"
            android:text="@string/statename"
            android:textSize="22sp"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:textColor="@color/purple_500"
            android:textAlignment="center"
            android:layout_gravity="center_horizontal"/>
        <TextView
            android:id="@+id/cityname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="30dp"
            android:text="@string/cityname"
            android:textSize="18sp"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:textColor="@color/purple_500"
            android:textAlignment="center"
            android:layout_gravity="center_horizontal"/>




        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="80dp">

            <TextView
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="@string/active"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:layout_marginStart="5dp"/>


            <TextView
                android:id="@+id/active"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="1"
                android:textColor="@color/black"
                android:textSize="18sp"/>

            <LinearLayout
                android:layout_width="150dp"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/delta_cases"
                    android:textColor="#CF0F5C"
                    android:textSize="18sp"
                    android:fontFamily="casual"
                    android:layout_marginEnd="0dp"/>

            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:orientation="horizontal">


            <TextView
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="@string/confirm"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:layout_marginStart="5dp"/>

            <TextView
                android:id="@+id/confirm"
                android:layout_width="120dp"
                android:layout_height="match_parent"
                android:text="1"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="18sp" />


            <LinearLayout
                android:layout_width="150dp"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:text="1"
                    android:id="@+id/dconfirm"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:layout_marginEnd="0dp"/>
            </LinearLayout>


        </LinearLayout>




        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="120dp"
            android:orientation="horizontal">


            <TextView
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="@string/deceased"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:layout_marginStart="5dp"/>


            <TextView
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="1"
                android:id="@+id/deceased"
                android:textColor="@color/black"
                android:textSize="18sp"/>


            <LinearLayout
                android:layout_width="150dp"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:text="1765"
                    android:id="@+id/ddeceased"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:layout_marginEnd="0dp"/>
            </LinearLayout>


        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="140dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="@string/recovered"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:layout_marginStart="5dp"/>


            <TextView
                android:id="@+id/recovered"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="1"
                android:textColor="@color/black"
                android:textSize="18sp"/>


            <LinearLayout
                android:layout_width="150dp"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/drecovered"
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:text="277"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:layout_marginEnd="0dp"/>
            </LinearLayout>


        </LinearLayout>


    </androidx.cardview.widget.CardView>

</LinearLayout>